<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        style="@style/TextViewStyle"
        android:layout_width="365dp"
        android:layout_height="65dp"
        android:fontFamily="@font/my_font6"
        android:text="ONLINE SHOE STORE"
        android:textColor="@android:color/darker_gray"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <ImageView
        android:id="@+id/vectorImage"
        android:layout_width="168dp"
        android:layout_height="127dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <TextView
        style="@style/TextViewStyle"
        android:layout_width="285dp"
        android:layout_height="105dp"
        android:fontFamily="@font/my_font6"
        android:text="@string/app_name"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <Button
        android:id="@+id/buttonLogin"
        style="@style/ButtonStyle"
        android:layout_width="190dp"
        android:layout_height="65dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vectorImage"
        app:layout_constraintVertical_bias="0.939" />

    <Button
        android:id="@+id/buttonSignUp"
        style="@style/ButtonStyle"
        android:layout_width="186dp"
        android:layout_height="66dp"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />

</androidx.constraintlayout.widget.ConstraintLayout>