<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewProduct"
        android:layout_width="393dp"
        android:layout_height="319dp"
        android:layout_marginTop="24dp"
        android:contentDescription="Изображение товара"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="111dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/my_font_7"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProduct" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="72dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="98dp"
        android:layout_height="35dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/my_font_7"
        android:text="@string/brand"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProduct" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="98dp"
        android:layout_height="46dp"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/my_font_7"
        android:text="@string/color"

        android:textColor="@android:color/black"

        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProduct" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:layout_marginTop="248dp"
        android:fontFamily="@font/my_font_7"
        android:text="@string/price"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProduct" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="90dp"
        android:layout_height="41dp"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/my_font_7"
        android:text="@string/size"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProduct" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="168dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/my_font6"
        android:text="Название: "
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProduct" />

    <TextView
        android:id="@+id/textViewBrand"
        android:layout_width="154dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/my_font6"
        android:text="Бренд: "
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewColor"
        android:layout_width="158dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/my_font6"
        android:text="Цвет: "
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBrand" />

    <TextView
        android:id="@+id/textViewSize"
        android:layout_width="163dp"
        android:layout_height="31dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/my_font6"
        android:text="Размер: "
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewColor" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/my_font6"
        android:text="Цена: "
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSize" />

    <ImageView
        android:id="@+id/wishlist"
        android:layout_width="61dp"
        android:layout_height="58dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="720dp"
        android:src="@drawable/wishlistoff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginTop="212dp"
        android:fontFamily="@font/my_font6"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewColor" />

    <ImageView
        android:id="@+id/cart"
        android:layout_width="59dp"
        android:layout_height="53dp"
        android:layout_marginTop="724dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/cartoff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-
</androidx.constraintlayout.widget.ConstraintLayout>
